# irods_database_plugin_cockroachdb_bulkreg

./: CMakeLists.txt  README.md
include/: low_level.hpp  low_level_libpq.hpp  low_level_odbc.hpp  mid_level.hpp
packaging/: localhost_setup_cockroachdb.input
src/: db_plugin.cpp  general_query.cpp  general_update.cpp  icatSysTables.sql.pp.in  low_level_libpq.cpp  low_level_odbc.cpp  mid_level_routines.cpp
